--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,4 +1,4 @@
-<%-include('header')%>
+<%- include('header.ejs') %>
 <div class="container">
   <h1><%=title%></h1>
   <a href="/profile">Profile</a>
@@ -6,5 +6,5 @@
 
 <br /><a href="/transfer">Transfer"</a>
 
-<%-include('footer')%>
+<%-include('footer.ejs')%>
 
