index.ejs update

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,7 +4,7 @@
   <a href="/profile">Profile</a>
 </div>
 
-<br /><a href="/transfer">Transfer"</a>
+<br /><a href="/transfer.ejs">Transfer"</a>
 
 <%-include('footer.ejs')%>
 
