--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -1,4 +1,4 @@
-<%-include('header.ejs')%>
+<%-include('header')%>
 <h1>Profile</h1>
 <div>
     <p><%=user.name%></p>
@@ -10,4 +10,4 @@
 </div>
 <br>
 <a href='/'>Back to Account Summary</a>
-<%-include('footer.ejs')%>
+<%-include('footer')%>
