--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,7 +5,7 @@
   <a href="/profile">Profile</a>
 </div>
 
-<%-include('summary',{account:accounts.savings})%>
+<%-include('summary',{account:account.savings})%>
 
 <br /><a href="/transfer">Transfer</a>
 
