--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,9 +4,9 @@
   <h1><%=title%></h1>
   <a href="/profile">Profile</a>
 </div>
-<%-include('summary',{account:account.savings})%>
-<%-include('summary',{account:accounts.checking})%>
-<%-include('summary',{account:accounts.credit})%>
+<%-include('summary',{accounts:account.savings})%>
+<%-include('summary',{accounts:accounts.checking})%>
+<%-include('summary',{accounts:accounts.credit})%>
 
 <br /><a href="/transfer">Transfer</a>
 
