--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,10 +4,10 @@
   <h1><%=title%></h1>
   <a href="/profile">Profile</a>
 </div>
-
-  <%-include('summary.ejs',{account:accounts.checking})%>
-  <%-include('summary.ejs',{account:accounts.credit})%>
-  <%-include('summary.ejs',{account:accounts.savings})%>
+  <%-include('summary',{account:accounts.savings})%>
+  <%-include('summary',{account:accounts.checking})%>
+  <%-include('summary',{account:accounts.credit})%>
+  
 
 
 
