--- a/src/views/account.ejs
+++ b/src/views/account.ejs
@@ -1,5 +1,5 @@
 <%- include('header') %>
-<%-include('transactions.ejs',{account: account})%>
+<%-include('transactions',{account:account})%>
 
   <% if (account.unique_name == 'credit' && account.balance > 0) { %>
     <br><a href="/payment">Make a Payment</a>
