--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,11 +1,11 @@
-<%- include('header') %>
+<%- include('header');%>
 
 <div class="container">
   <h1><%=title%></h1>
   <a href="/profile">Profile</a>
 </div>
   <%-include('summary',{account:accounts.savings})%>
-  <%-include('summary',{account:accounts.checking})%>
+  <%-include('summary';,{account:accounts.checking})%>
   <%-include('summary',{account:accounts.credit})%>
   
 
